# SVO

./: .gitignore  README.md
svo/: CMakeLists.txt  thirdparty
svo/include/svo/: common.cpp  common.h  feature.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  initialization.h  point.h  reprojector.h  sparse_img_align.h
svo/src/: config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  sparse_img_align.cpp
svo/test/: test_depth_filter.cpp
svo_ros/: CMakeLists.txt  rviz_config.rviz  rviz_config_yj.rviz
svo_ros/launch/: test_rig3_kitti.launch  test_rig3_kitti_gdb.launch
svo_ros/param/: camera_pinhole_kitti.yaml  vo_fast.yaml
svo_ros/src/: kitti_parser.cpp  kitti_parser.h  visualizer.cpp  vo_yj.cpp
